Implemented delete tag filter and refactor other bits

--- a/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
+++ b/HitomiScrollViewerWebApp/Components/TagFilterEditor.razor
@@ -29,6 +29,5 @@
     <MudFab Color="Color.Primary"
             StartIcon="@Icons.Material.Filled.Delete"
             Style="grid-column: 5"
-            OnClick="@OnDeleteButtonClicked"
-            Disabled="@(CurrentTagFilter == null)" />
+            OnClick="@OnDeleteButtonClicked" />
 </div>
