Completed basic Search page structure

--- a/HitomiScrollViewerWebApp/Components/DialogTextField.razor
+++ b/HitomiScrollViewerWebApp/Components/DialogTextField.razor
@@ -1,7 +1,7 @@
 ﻿<MudTextField FullWidth="true"
               Label="Name"
-              Counter="50"
-              MaxLength="50"
+              Counter="TagFilter.TAG_FILTER_NAME_MAX_LEN"
+              MaxLength="TagFilter.TAG_FILTER_NAME_MAX_LEN"
               Immediate="true"
               T="string"
               @bind-Value="@Text"
