--- a/HitomiScrollViewerWebApp/Layout/MainLayout.razor
+++ b/HitomiScrollViewerWebApp/Layout/MainLayout.razor
@@ -22,10 +22,11 @@
             <MudNavMenu>
                 <MudNavLink Href="/search" Icon="@Icons.Material.Filled.Search">Search</MudNavLink>
                 <MudNavLink Href="/browse" Icon="@Icons.Material.Filled.Folder">Browse</MudNavLink>
+                <MudNavLink Href="/download" Icon="@Icons.Material.Filled.Download">Download</MudNavLink>
                 <MudNavLink Href="/settings" Icon="@Icons.Material.Filled.Settings">Settings</MudNavLink>
             </MudNavMenu>
         </MudDrawer>
-        <MudMainContent>
+        <MudMainContent Style="height: 100dvh">
             @Body
         </MudMainContent>
     } else {
